k8s/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rani-guestbook-backend-deployment
  namespace: grupp1
  labels:
    app: rani-guestbook-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: rani-guestbook-backend
  template:
    metadata:
      labels:
        app: rani-guestbook-backend
    spec:
      containers:
        - name: rani-guestbook-backend
          image: quay.io/ranper3110/guestbook-backend:1.0.4-5b03878
          ports:
            - containerPort: 8080

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
