k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rani-guestbook-frontend-deployment
  namespace: grupp1
  labels:
    app: rani-guestbook-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rani-guestbook-frontend
  template:
    metadata:
      labels:
        app: rani-guestbook-frontend
    spec:
      containers:
        - name: rani-guestbook-frontend
          image: quay.io/ranper3110/guestbook-frontend:1.0.3-3690b61
          ports:
            - containerPort: 8080

# mount the nginx config file
          volumeMounts:
            - name: nginx-api-proxy
              mountPath: /opt/app-root/etc/nginx.default.d/20-api-proxy.conf
              subPath: 20-api-proxy.conf

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3

          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
    # define where the mounted file comes from
      volumes:
        - name: nginx-api-proxy
          configMap:
            name: rani-guestbook-frontend-nginx-api-proxy
