k8s/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rani-guestbook-backend-service
  namespace: grupp1
spec:
  selector:
    app: rani-guestbook-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
