k8s/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rani-guestbook-frontend-service
  namespace: grupp1
spec:
  selector:
    app: rani-guestbook-frontend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
