k8s/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rani-guestbook-postgres-service
  namespace: grupp1
spec:
  selector:
    app: rani-guestbook-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
