k8s/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rani-guestbook-redis-service
  namespace: grupp1
spec:
  selector:
    app: rani-guestbook-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
