k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rani-guestbook-frontend-route
  namespace: grupp1  
spec:
  to:
    kind: Service
    name: rani-guestbook-frontend-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
